--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 	},
 	"content_scripts": [
 		{
-			"matches": ["<all_urls>"],
+			"matches": ["https://github.com/*"],
 			"js": [
 				"js/jquery-3.6.4.min.js",
 				"js/content-script.js"
